overhaul of damage tracking for move use
this automatically syncs health adjustments for pokeplayers, fixes healing moves on them.
more similar passes should probably be done to find remaining edge cases.