@@ -4,7 +4,6 @@ import java.util.List;
 import java.util.Random;
 
 import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.entity.Mob;
 import pokecube.api.moves.Battle;
 import pokecube.api.moves.utils.MoveApplication;
 import pokecube.core.ai.brain.BrainUtils;
@@ -16,14 +15,14 @@ public class RandomEnemy implements IMoveTargetter
     @Override
     public boolean test(MoveApplication move)
     {
-        Mob mob = move.getUser().getEntity();
+        var mob = move.getUserEntity();
         Battle battle = Battle.getBattle(mob);
         if (battle != null)
         {
             List<LivingEntity> enemies = battle.getEnemies(mob);
             if (!enemies.isEmpty())
             {
-                if (enemies.size() == 1) return move.getTarget() == enemies.get(0);
+                if (enemies.size() == 1) return move.getTarget() == enemies.getFirst();
                 // TODO Test that this reliably picks one the same one, but randomly so.
                 Random r = new Random(move.getUser().getRNGValue() ^ mob.level().getGameTime());
                 return move.getTarget() == enemies.get(r.nextInt(enemies.size()));
